/*
 * fnirs-plugin: build.gradle
 */
buildscript {
    ext {
        vXnat = "1.10.0-RC-SNAPSHOT"
        vPluginVersion = "1.2.2-SNAPSHOT"
        vPluginDescription = "XNAT fNIRS Plugin"
    }
}

plugins {
    id "java"
    id "maven-publish"
    id "com.palantir.git-version" version "5.0.0"
    id "io.freefair.lombok" version "9.2.0"
    id "io.spring.dependency-management" version "1.1.7"
    id "org.nrg.xnat.build.xnat-data-builder" version "${vXnat}"
}

group = "org.nrg.xnatx.plugins"
version = vPluginVersion
description = vPluginDescription

repositories {
    mavenLocal()
    maven { url = "https://nrgxnat.jfrog.io/nrgxnat/libs-release" }
    maven { url = "https://nrgxnat.jfrog.io/nrgxnat/libs-snapshot" }
    mavenCentral()
}

configurations {
    implementation.extendsFrom(implementAndInclude)
    implementation.extendsFrom(xnatProvided)
    testImplementation.exclude group: "org.slf4j", module: "log4j-over-slf4j"
}

dependencies {
    xnatProvided platform("org.nrg:parent:${vXnat}")

    xnatProvided "org.nrg:framework"
    xnatProvided "org.nrg.xnat:xnat-data-models"
    xnatProvided "org.nrg.xnat:web"
    xnatProvided "org.nrg.xdat:core"
    xnatProvided "org.nrg:dicom-xnat-mx"
    xnatProvided "dcm4che:dcm4che-core"
    xnatProvided "io.springfox:springfox-swagger2"
    xnatProvided "io.springfox:springfox-swagger-ui"

    testImplementation "org.junit.jupiter:junit-jupiter-api"
    testImplementation "org.mockito:mockito-core"
    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine"
}

dependencyManagement {
    imports {
        mavenBom "org.nrg:parent:${vXnat}"
    }
    generatedPomCustomization {
        enabled = false
    }
}

test {
    useJUnitPlatform()
}

// Not required in a standard build, but the XNAT data builder generates code from XNAT data-type
// schemas that the compiler needs to know about.
sourceSets {
    main {
        java {
            srcDir "src/main/java"
            srcDir "build/xnat-generated/src/main/java"
        }
        resources {
            srcDir "src/main/resources"
            srcDir "build/xnat-generated/src/main/resources"
        }
    }
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

compileJava {
    dependsOn xnatDataBuilder
    options.fork = false
}

jar {
    doLast {
        if (!gradle.taskGraph.hasTask(":xnatPluginJar")) {
            logger.warn "WARNING: You should generally run xnatPluginJar instead of jar task for this plugin"
        }
    }
    from {
        (configurations.compileClasspath - configurations.xnatProvided).collect {
            it.isDirectory() ? it : zipTree(it)
        }
    }
}

tasks.register("xnatPluginJar", Jar) {
    zip64 = true
    archiveClassifier = "xpl"
    from {
        configurations.implementAndInclude.collect { it.isDirectory() ? it : zipTree(it) }
    } {
        exclude "META-INF/*.SF"
        exclude "META-INF/*.DSA"
        exclude "META-INF/*.RSA"
    }
    with jar
}

// Pulls in the Jenkins BUILD_NUMBER environment variable if available.
def buildDate = new Date()
def buildNumber = System.getenv().BUILD_NUMBER?.toInteger() ?: "Manual"
def isDirty, branchName, gitHash, gitHashFull, commitDistance, lastTag, isCleanTag

try {
    def gitDetails = versionDetails()
    isDirty = gitVersion().endsWith ".dirty"
    branchName = gitDetails.branchName ?: "Unknown"
    gitHash = gitDetails.gitHash
    gitHashFull = gitDetails.gitHashFull
    commitDistance = gitDetails.commitDistance
    lastTag = gitDetails.lastTag
    isCleanTag = gitDetails.isCleanTag
} catch (IllegalArgumentException e) {
    logger.info "Got an error trying to read VCS metadata from git. It's possible this project is not under VCS control. Using placeholder values for manifest entries."
    isDirty = true
    branchName = "Unknown"
    gitHash = "None"
    gitHashFull = "None"
    commitDistance = 0
    lastTag = "None"
    isCleanTag = false
}

tasks.withType(Jar).configureEach {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    manifest {
        attributes "Application-Name": vPluginDescription,
                "Build-Date": buildDate,
                "Build-Number": buildNumber,
                "Implementation-Version": vPluginVersion,
                "Implementation-Sha": gitHash,
                "Implementation-Sha-Full": gitHashFull,
                "Implementation-Commit": commitDistance,
                "Implementation-LastTag": lastTag,
                "Implementation-Branch": branchName,
                "Implementation-CleanTag": isCleanTag,
                "Implementation-Dirty": isDirty
    }
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java

            artifacts {
                artifact xnatPluginJar
            }

            versionMapping {
                usage("java-api") {
                    fromResolutionOf("runtimeClasspath")
                }
                usage("java-runtime") {
                    fromResolutionResult()
                }
            }
            pom {
                name = "OXI FNIRS Plugin"
                description = "Adds support for displaying and QCing FNIRS image data"
                developers {
                    developer {
                        id = "Will_Horton"
                        name = "Will Horton"
                        email = "will@xnatworks.io"
                    }
                    developer {
                        id = "James_Dickson"
                        name = "James Dickson"
                        email = "james@xnatworks.io"
                    }
                    developer {
                        id = "Mohana_Ramaratnam"
                        name = "Mohana Ramaratnam"
                        email = "mohana@xnatworks.io"
                    }
                    developer {
                        id = "rherrick"
                        name = "Rick Herrick"
                        email = "rick@xnatworks.io"
                    }
                }
                scm {
                    connection = "scm:git:git://github.com/xnatworks/fNIRSPluginXNAT.git"
                    developerConnection = "scm:git:ssh://github.com/xnatworks/fNIRSPluginXNAT.git"
                    url = "https://github.com/xnatworks/fNIRSPluginXNAT"
                }
            }
        }
    }
    repositories{
        maven {
            url "https://nrgxnat.jfrog.io/nrgxnat/libs-${project.version.endsWith("-SNAPSHOT") ? "snapshot" : "release"}"
            // The value for name must match <id> in ~/.m2/settings.xml
            name = "XNAT_Artifactory"
        }
    }
}

